fixed cards alignment with flexbox

--- a/src/style.css
+++ b/src/style.css
@@ -166,12 +166,15 @@ footer p, footer a{
 .menu-container section{
     padding:20px 20px;
     display:flex;
+    justify-content: space-between;
     align-items: center;
     gap:20px;
     box-shadow:var(--shadow);
     border-radius:8px;
     margin:20px;
     background-color:#C4FFF9;
+    min-height:250px;
+    height:auto;
 }
 
 .menu-title{
@@ -179,6 +182,7 @@ footer p, footer a{
     font-size:4rem;
     text-align:center;
     font-weight:600;
+    padding:10px;
 }
 
 section img{
@@ -193,4 +197,6 @@ section img{
     justify-content: center;
     align-items:center;
     gap:10px;
+    text-align:center;
+    flex-grow:1;
 }
